--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
     "@nuxtjs/web-vitals": "^0.2.2",
     "@types/node": "^18.11.18",
     "@volar-plugins/vetur": "latest",
-    "nuxt": "^3.1.0"
+    "nuxt": "^3.1.0",
+    "nuxt-simple-sitemap": "^1.0.6"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.6",
     "js-cookie": "^3.0.1",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "pinia": "^2.0.29"
   }
 }
