--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev --port=5000",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@nuxtjs/apollo": "^5.0.0-alpha.5",
     "@nuxtjs/web-vitals": "^0.2.2",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.11.18",
     "@volar-plugins/vetur": "latest",
     "nuxt": "^3.1.0",
